create post command

--- a/res/home/tmux.conf
+++ b/res/home/tmux.conf
@@ -150,7 +150,7 @@ bind -n M-d new-window 'lazydocker'
 
 bind -n M-E new-window 'trans -t en' 
 bind -n M-P new-window 'trans -t pt' 
-
+bind -n M-B command-prompt -p "create-post" "run-shell 'create-post %% &>/dev/null'; new-window 'nvim ~/dev/repos/MSBarbieri/msbarbieri.github.io/content/posts/%%.md'"
 # Status bar
 set -g status on
 set-option -g status-position top
