lot of stuff, i don't remember

--- a/res/home/tmux.conf
+++ b/res/home/tmux.conf
@@ -141,7 +141,7 @@ bind -n M-z resize-pane -Z
 
 # Hotkeys
 bind -n M-t new-window 'taskwarrior-tui' 
-bind -n M-H new-window 'htop' 
+bind -n M-a new-window 'htop' 
 bind -n M-m new-window 'spt' 
 bind -n M-v new-window 'pulsemixer' 
 bind -n M-g new-window 'lazygit' 
